--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <title>上海地区车辆使用空间分布特征分析报告</title>
     <meta http-equiv="refresh" content="0; url=上海地区车辆使用空间分布特征分析报告.html">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            max-width: 600px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-    <p>正在跳转到分析报告...</p>
-    <p>如果页面没有自动跳转，请 <a href="上海地区车辆使用空间分布特征分析报告.html">点击这里查看报告</a></p>
+    <div class="container">
+        <h1>🚴 上海地区车辆使用分析报告</h1>
+        <p>正在跳转到分析报告页面...</p>
+        <p>如果页面没有自动跳转，请 <a href="上海地区车辆使用空间分布特征分析报告.html">点击这里查看报告</a></p>
+        <p><small>如果链接无效，请检查文件名是否正确</small></p>
+    </div>
 </body>
 </html>
